--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="mainContainer">
+    <main class="mainContainer">
 
 
         <img src="./images/image-qr-code.png" alt="QR code">
@@ -29,11 +29,11 @@
         </div>
 
 
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/dovanaite">Donata</a>.
-    </div>
+    </footer>
 
 </body>
 
