--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <img src="./images/image-qr-code.png" alt="QR code">
 
 
-        <div class="textContainer1">
+        <h1 class="textContainer1">
             Improve your front-end skills by building projects
-        </div>
+        </h1>
         <div class="textContainer2">
             Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
         </div>
